updated text with purpose

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 		<title>Popular Commands</title>
 	</head>
 	<body>
-		<h1>Learning Popular Commands UpdatedPage</h1>
+		<h1>Learning Popular Commands</h1>
+			<h2> The purpose of this page is to explain the popular Linux commands to create a webpage.</h2>
 	</body>
 
 </html>
