--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	</head>
 	<body>
 		<h1>Learning Popular Commands</h1>
-			<h2> The purpose of this page is to explain the popular Linux commands to create a webpage</h2>
-			<p>ls-will list the directories that are located in the current directory you are in<br>
-			cd will change to home<br>
-			cd dir-will change the directory to dir<br>
-			pwd- shows the current directory<br>
-			mkdir dir-will create a new directory dir</p>  
+			<h3> The purpose of this page is to explain the popular Linux commands to create a webpage and host it using GitHub Pages. GIT is an open source version control system that manages the merging of documents. It allows multiple developers to work together on projects. </h3>
+		<h2> Linux Commands</h2>
+			<p>ls - will list the directories that are located in the current directory you are in<br>
+			cd - will change to home<br>
+			cd dir - will change the directory to dir<br>
+			pwd - shows the current directory<br>
+			mkdir dir - will create a new directory dir</p>  
 	</body>
 
 </html>
