created vi command section and updated text

--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
 	<body>
 		<h1>Learning Popular Commands</h1>
 			<h3> The purpose of this page is to explain the popular Linux commands to create a webpage and host it using GitHub Pages. GIT is an open source version control system that manages the merging of documents. It allows multiple developers to work together on projects. </h3>
+	
 		<h2> Linux Commands</h2>
 			<p>ls - will list the directories that are located in the current directory you are in<br>
 			cd - will change to home<br>
 			cd dir - will change the directory to dir<br>
 			pwd - shows the current directory<br>
-			mkdir dir - will create a new directory dir</p>  
+			mkdir dir - will create a new directory dir</p>
+
+		<h2> Vi Commands</h2>
+			<p> Vi is the visual editor program, it is built into anything with Linux<br>
+			vi filename - will edit the filename, must go into insert mode and edit the file, then save with shift:wq<br>
+			vi -r filename - will recover filename that was being edited when system crashed</p>   
 	</body>
 
 </html>
