created Git Commands section and updated text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 		<h2> Vi Commands</h2>
 			<p> Vi is the visual editor program, it is built into anything with Linux<br>
 			vi filename - will edit the filename, must go into insert mode and edit the file, then save with shift:wq<br>
-			vi -r filename - will recover filename that was being edited when system crashed</p>   
+			vi -r filename - will recover filename that was being edited when system crashed</p>
+	
+		<h2> Git Commands</h2>
+			<p> git status - gives status on repository, will show the current files in working directory<br>
+			git add filename - adds a file as it is to your next commit<br>
+			git init - initialize an existing directory as Git repository<br>
+			git commit - m "descriptive message" - creates a commit<br>
+			git branch - will list your branches<br>
+			git checkout -b "BranchName" - creates a new branch<br>
+			git checkout - switches to another branch in your directory<br>
+			git merge BranchName - merges the new changes made on the new branch's history into the current one<br>
+			git log - shows all commits in the current branch's history</p>   
 	</body>
 
 </html>
